syntax = "proto3";

package pb.svc.manager.worker;
option go_package = "github.com/aglide100/dak-keyword/pb/svc/manager/worker";

import "pb/unit/worker/worker.proto";

service WorkerService {
    rpc GetWorkerList(GetWorkerListReq) returns (GetWorkerListRes);
    rpc UpdateWorkerStatus(UpdateWorkerStatusReq) returns (UpdateWorkerStatusRes);
}

message GetWorkerListReq {
    string id = 1;
}

message GetWorkerListRes {
    repeated unit.worker.Worker Worker = 1;
}

message UpdateWorkerStatusReq {
    string id = 1;
    string msg = 2;
}

message UpdateWorkerStatusRes {
    //  passed
}